--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,4 @@
-<button mat-icon-button [matMenuTriggerFor]="menu">
-  <mat-icon>menu</mat-icon>
-</button>
-<mat-menu #menu="matMenu">
-  <button mat-menu-item disabled>
-    <mat-icon>home</mat-icon>
-    <span>Home</span>
-  </button>
-  <button mat-menu-item>
-    <mat-icon>dashboard</mat-icon>
-    <span>Cases</span>
-  </button>
-</mat-menu>
-
+<app-header></app-header>
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
