# If applied, this commit will... Rename all references to Case as Legalcase and case to legalcase. Rename all references of messaging to message.
# Why is this change needed?
I believe the use of the word case as an object was causing friction with the built in keyword

# How does it address the issue?
Will hopefully clear up these bugs surrounding the use of case as an Injectable.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/cases/cases.component.html
+++ b/src/app/components/cases/cases.component.html
@@ -1,21 +1,21 @@
 <h2>My Cases</h2>
 
 <div>
-  <label>Case title:
-    <input #caseTitle />
+  <label>Legal Case title:
+    <input #legalcaseTitle />
   </label>
   <!-- (click) passes input value to add() and then clears the input -->
-  <button (click)="add(caseTitle.value); caseTitle.value=''">
+  <button (click)="add(legalcaseTitle.value); legalcaseTitle.value=''">
     add
   </button>
 </div>
 
 <ul class="cases">
-  <li *ngFor="let case of cases">
-    <a routerLink="/detail/{{case.id}}">
-      <span class="badge">{{case.id}}</span> {{case.title}}
+  <li *ngFor="let legalcase of legalcases">
+    <a routerLink="/detail/{{legalcase.id}}">
+      <span class="badge">{{legalcase.id}}</span> {{legalcase.title}}
     </a>
     <button class="delete" title="delete case"
-            (click)="delete(case)">x</button>
+            (click)="delete(legalcase)">x</button>
   </li>
 </ul>
