# If applied, this commit will... Add the starter code for the legalcase html.
# Why is this change needed?
The existing html is incorrect. It has the nav button.

# How does it address the issue?
It is the html code.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/legalcase-item/legalcase-item.component.html
+++ b/src/app/components/legalcase-item/legalcase-item.component.html
@@ -1,13 +1,11 @@
-<button mat-icon-button [matMenuTriggerFor]="menu">
-  <mat-icon>menu</mat-icon>
-</button>
-<mat-menu #menu="matMenu">
-  <button mat-menu-item disabled>
-    <mat-icon>home</mat-icon>
-    <span>Home</span>
-  </button>
-  <button mat-menu-item>
-    <mat-icon>dashboard</mat-icon>
-    <span>Cases</span>
-  </button>
-</mat-menu>
+<div *ngIf="legalcase">
+  <h2>{{ legalcase.title | uppercase }} Details</h2>
+  <div><span>id: </span>{{legalclase.id}}</div>
+  <div>
+    <label>title:
+      <input [(ngModel)]="legalcase.title" placeholder="title"/>
+    </label>
+  </div>
+  <button (click)="goBack()">go back</button>
+  <button (click)="save()">save</button>
+</div>
