--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,9 @@
-<p>
-  dashboard works!
-</p>
+<h3>Top Legalcases</h3>
+<div class="grid grid-pad">
+  <a *ngFor="let legalcase of legalcases" class="col-1-4"
+     routerLink="/detail/{{legalcase.id}}">
+    <div class="module legalcase">
+      <h4>{{legalcase.title}}</h4>
+    </div>
+  </a>
+</div>
