# If applied, this commit will... Add the routing for the menu spans.
# Why is this change needed?
So that the routing works when clicking a menu item.

# How does it address the issue?
It specifies the routerlink to route to.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,12 +2,13 @@
   <mat-icon>menu</mat-icon>
 </button>
 <mat-menu #menu="matMenu">
-  <button mat-menu-item disabled>
+  <button mat-menu-item>
     <mat-icon>home</mat-icon>
-    <span>Home</span>
+    <span routerLink="/dashboard">Dashboard</span>
   </button>
   <button mat-menu-item>
     <mat-icon>dashboard</mat-icon>
-    <span>Cases</span>
+    <span routerLink="/legalcases">Cases</span>
   </button>
 </mat-menu>
+
