--- a/src/app/components/legalcase-detail/legalcase-detail.component.html
+++ b/src/app/components/legalcase-detail/legalcase-detail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="legalcase">
   <h2>{{ legalcase.title | uppercase }} Details</h2>
-  <div><span>id: </span>{{legalclase.id}}</div>
+  <div><span>id: </span>{{legalcase.id}}</div>
   <div>
     <label>title:
       <input [(ngModel)]="legalcase.title" placeholder="title"/>
