# If applied, this commit will... Change wording from Cases to Legal Cases.
# Why is this change needed?
Change the name for clarity.

# How does it address the issue?
It changes the name.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
   </button>
   <button mat-menu-item>
     <mat-icon>dashboard</mat-icon>
-    <span routerLink="/legalcases">Cases</span>
+    <span routerLink="/legalcases">Legal Cases</span>
   </button>
 </mat-menu>
 
