# If applied, this commit will... Move the route-link to wire to the button.
# Why is this change needed?
So that if the user clicks anywhere on the button, it follows the route.

# How does it address the issue?
Moves the element to the button level.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,13 +2,12 @@
   <mat-icon>menu</mat-icon>
 </button>
 <mat-menu #menu="matMenu">
-  <button mat-menu-item>
-    <mat-icon>home</mat-icon>
-    <span routerLink="/dashboard">Dashboard</span>
-  </button>
-  <button mat-menu-item>
+  <button mat-menu-item routerLink="/dashboard">
     <mat-icon>dashboard</mat-icon>
-    <span routerLink="/legalcases">Legal Cases</span>
+    <span >Dashboard</span>
+  </button>
+  <button mat-menu-item routerLink="/legalcases">
+    <mat-icon>business-center</mat-icon>
+    <span>Legal Cases</span>
   </button>
 </mat-menu>
-
