--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
     <span >Dashboard</span>
   </button>
   <button mat-menu-item routerLink="/legalcases">
-    <mat-icon>business-center</mat-icon>
-    <span>Legal Cases</span>
+    <mat-icon>folder</mat-icon>
+    <span>Cases</span>
   </button>
 </mat-menu>
