# If applied, this commit will... Change a tag to span.
# Why is this change needed?
Didn't need the extra weight of an a tag.

# How does it address the issue?
Changes the tag.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <h3>Top Legalcases</h3>
 <div class="grid grid-pad">
-  <a *ngFor="let legalcase of legalcases" class="col-1-4"
+  <span *ngFor="let legalcase of legalcases" class="col-1-4"
      routerLink="/detail/{{legalcase.id}}">
     <div class="module legalcase">
       <h4>{{legalcase.title}}</h4>
     </div>
-  </a>
+  </span>
 </div>
