--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <app-header></app-header>
-<div style="text-align:center">
+<div class="container">
   <h1>
     Welcome to {{ title }}!
   </h1>
+  <router-outlet></router-outlet>
 </div>
 
-<router-outlet></router-outlet>
+
