Apply some style to the grid, namely add a border and center the text. Remove old styles.
We changed to a grid style look.

Sets the CSS style.

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -2,19 +2,7 @@ h3 {
   text-align: center;
 }
 
-.grid {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: center;
-  justify-content: center;
+.mat-grid-tile {
+  border: 1px solid grey;
   text-align: center;
-  margin: 0 auto;
-  max-width: 800px;
-}
-
-.module {
-  margin: 0 5px;
-  height: 150px;
-  width: 150px;
-  border: 2px solid grey;
 }
