--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <h3>Top Legalcases</h3>
 
-<mat-grid-list cols="4" rowHeight="100px">
+<mat-grid-list cols="4" rowHeight="100px" [gutterSize]="10">
   <mat-grid-tile
       *ngFor="let legalcase of legalcases"
       routerLink="/detail/{{legalcase.id}}"
