# If applied, this commit will... Add docket and defendant values to html.  Align the properties in an ul.
# Why is this change needed?
Need a way to organize the different properties in the html.

# How does it address the issue?
It contains the html and css changes.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -7,6 +7,13 @@
       [colspan]="legalcase.cols"
       [rowspan]="legalcase.rows"
       [style.background]="legalcase.color">
-    {{legalcase.title}}
+      <ul>
+        <li>{{legalcase.title}}
+        </li>
+        <li>{{legalcase.docket}}
+        </li>
+        <li>{{legalcase.defendant}}
+        </li>
+      </ul>
   </mat-grid-tile>
 </mat-grid-list>
