--- a/src/app/components/legalcases/legalcases.component.css
+++ b/src/app/components/legalcases/legalcases.component.css
@@ -6,3 +6,13 @@
   border: 1px solid grey;
   text-align: center;
 }
+
+ul {
+  list-style: none;
+  text-align: left;
+  padding: 0;
+}
+
+button {
+  text-align: right;
+}
