# If applied, this commit will... Add second mat-card action row to bottom of card. Row will contain mat-icon-button for each. We will center the buttons and give each a width of 20%.
# Why is this change needed?
Add styling and buttons for future components.

# How does it address the issue?
It adds the HTML and CSS.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/legalcase-detail/legalcase-detail.component.css
+++ b/src/app/components/legalcase-detail/legalcase-detail.component.css
@@ -10,3 +10,11 @@ input {
 mat-card-subtitle {
   text-align: center;
 }
+
+mat-card-actions {
+  text-align: center;
+}
+
+.mat-icon-button {
+  width: 25%;
+}
