--- a/src/app/components/legalcase-detail/legalcase-detail.component.html
+++ b/src/app/components/legalcase-detail/legalcase-detail.component.html
@@ -25,4 +25,15 @@
     <button mat-button (click)="goBack()">go back</button>
     <button mat-button (click)="save()">save</button>
   </mat-card-actions>
+  <mat-card-actions>
+    <button mat-icon-button (click)="files()">
+      <mat-icon>folder</mat-icon>
+    </button>
+    <button mat-icon-button (Click)="calendar()">
+      <mat-icon>today</mat-icon>
+    </button>
+    <button mat-icon-button (Click)="messages()">
+      <mat-icon>message</mat-icon>
+    </button>
+  </mat-card-actions>
 </mat-card>
