# If applied, this commit will... Change the h2 to an h3. Change "Details" to legalcase.docket value. Add text before value ala "Docket #: "
# Why is this change needed?
Add styling.

# How does it address the issue?
Adds the html.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/legalcase-detail/legalcase-detail.component.html
+++ b/src/app/components/legalcase-detail/legalcase-detail.component.html
@@ -1,8 +1,8 @@
 <mat-card *ngIf="legalcase">
   <mat-card-header>
-    <div mat-card-avatar class="legalcase-header-image"><mat-icon aria-label="case">folder</mat-icon></div>
-    <mat-card-title><h2>{{ legalcase.title | uppercase }}</h2></mat-card-title>
-    <mat-card-subtitle>Details</mat-card-subtitle>
+    <div mat-card-avatar class="legalcase-header-image"></div>
+    <mat-card-title><h3>{{ legalcase.title | uppercase }}</h3></mat-card-title>
+    <mat-card-subtitle>Docket #: {{legalcase.docket}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <div>
