# If applied, this commit will... Stop centering text for header element and subtitle. Add placeholder image to background of legal-case-header div.
# Why is this change needed?
Style.

# How does it address the issue?
Removes the alignment property.
Adds the css for the background image.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/legalcase-detail/legalcase-detail.component.css
+++ b/src/app/components/legalcase-detail/legalcase-detail.component.css
@@ -1,20 +1,19 @@
-h2 {
-  text-align: center;
-}
 label {
   font-weight: bold;
 }
 input {
   width: 100%;
 }
-mat-card-subtitle {
-  text-align: center;
+
+.mat-icon-button {
+  width: 25%;
 }
 
 mat-card-actions {
   text-align: center;
 }
 
-.mat-icon-button {
-  width: 25%;
+.legalcase-header-image {
+  background-image: url('http://via.placeholder.com/40x40');
+  background-size: cover;
 }
