# If applied, this commit will... Add tooltips to buttons.
# Why is this change needed?
For UX purposes.

# How does it address the issue?
It declares and positions the tooltip.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/legalcase-detail/legalcase-detail.component.html
+++ b/src/app/components/legalcase-detail/legalcase-detail.component.html
@@ -22,17 +22,17 @@
     </div>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button (click)="goBack()">go back</button>
-    <button mat-button (click)="save()">save</button>
+    <button mat-button matTooltip="Back!" matTooltipPosition="left" (click)="goBack()">go back</button>
+    <button mat-button matTooltip="Save!" matTooltipPosition="right" (click)="save()">save</button>
   </mat-card-actions>
   <mat-card-actions>
-    <button mat-icon-button (click)="files()">
+    <button mat-icon-button matTooltip="Files!" (click)="files()">
       <mat-icon>folder</mat-icon>
     </button>
-    <button mat-icon-button (Click)="calendar()">
+    <button mat-icon-button matTooltip="Calendar!"(Click)="calendar()">
       <mat-icon>today</mat-icon>
     </button>
-    <button mat-icon-button (Click)="messages()">
+    <button mat-icon-button matTooltip="Messages!" (Click)="messages()">
       <mat-icon>message</mat-icon>
     </button>
   </mat-card-actions>
