--- a/src/app/components/legalcase-detail/legalcase-detail.component.css
+++ b/src/app/components/legalcase-detail/legalcase-detail.component.css
@@ -16,4 +16,5 @@ mat-card-actions {
 .legalcase-header-image {
   background-image: url('http://via.placeholder.com/40x40');
   background-size: cover;
+  margin-right: 20px;
 }
