# If applied, this commit will... Change the clicks on the buttons for files, calendar and messages to be the proper router-link path with the id of the legalcase.
# Why is this change needed?
So that when the button is clicked it routes to the correct files object.

# How does it address the issue?
It wires the event to the action.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/legalcase-detail/legalcase-detail.component.html
+++ b/src/app/components/legalcase-detail/legalcase-detail.component.html
@@ -26,13 +26,13 @@
     <button mat-button matTooltip="Save!" matTooltipPosition="right" (click)="save()">save</button>
   </mat-card-actions>
   <mat-card-actions>
-    <button mat-icon-button matTooltip="Files!" (click)="files()">
+    <button mat-icon-button matTooltip="Files!" routerLink="/files/{{legalcase.id}}">
       <mat-icon>folder</mat-icon>
     </button>
-    <button mat-icon-button matTooltip="Calendar!"(Click)="calendar()">
+    <button mat-icon-button matTooltip="Calendar!" routerLink="/calendar/{{legalcase.id}}">
       <mat-icon>today</mat-icon>
     </button>
-    <button mat-icon-button matTooltip="Messages!" (Click)="messages()">
+    <button mat-icon-button matTooltip="Messages!" routerLink="/messages/{{legalcase.id}}">
       <mat-icon>message</mat-icon>
     </button>
   </mat-card-actions>
