--- a/src/app/components/legalfiles/legalfiles.component.html
+++ b/src/app/components/legalfiles/legalfiles.component.html
@@ -1,3 +1,27 @@
-<p>
-  legalfiles works!
-</p>
+<h2>Files</h2>
+
+<div class="header">
+  <label>Legal File title:
+    <input #legalfileTitle />
+  </label>
+  <!-- (click) passes input value to add() and then clears the input -->
+  <button (click)="add(legalfileTitle.value); legalfileTitle.value=''">
+    add
+  </button>
+</div>
+
+<mat-grid-list cols="2" rowHeight="100px" [gutterSize]="10">
+  <mat-grid-tile
+      *ngFor="let legalfile of legalfiles"
+      routerLink="/file/{{legalfile.id}}">
+      <ul>
+        <li>{{legalfile.title}}
+        </li>
+        <li>{{legalfile.icon}}
+        </li>
+      </ul>
+    <button mat-icon-button color="warn" class="delete" title="delete file" (click)="delete(legalfile)">
+      <mat-icon aria-label="delete">delete</mat-icon>
+    </button>
+  </mat-grid-tile>
+</mat-grid-list>
