# If applied, this commit will... Creates the starter code for the projects component which is essentially identical to the legalcase component except for replacing object names from legalcase to company. It contains the HTML and CSS as well.
# Why is this change needed?
So that we have a working company component with the logic, view and styling.

# How does it address the issue?
Sets all the inital code.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,3 +1,22 @@
-<p>
-  projects works!
-</p>
+
+<mat-grid-list cols="3" rowHeight="200px" [gutterSize]="10">
+  <mat-grid-tile>
+    <mat-grid-tile-header>{{ company[0].title }}</mat-grid-tile-header>
+    <mat-icon aria-label="delete">delete</mat-icon>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-grid-tile-header>Message Board</mat-grid-tile-header>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-grid-tile-header>To-dos</mat-grid-tile-header>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-grid-tile-header>Schedule</mat-grid-tile-header>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-grid-tile-header>Automatic Check-ins</mat-grid-tile-header>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-grid-tile-header>Docs & Files</mat-grid-tile-header>
+  </mat-grid-tile>
+</mat-grid-list>
