# If applied, this commit will... Add some of the beginning text for the projects html.
# Why is this change needed?
It is the beginning of creating the full html document.

# How does it address the issue?
It is setting the tile's subject.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,10 +1,15 @@
-
+<h3>Some company</h3>
 <mat-grid-list cols="3" rowHeight="200px" [gutterSize]="10">
-  <mat-grid-tile  *ngFor="let project of projects">
-    <mat-grid-tile-header>{{ project.title }}</mat-grid-tile-header>
-    <mat-icon aria-label="delete">delete</mat-icon>
+  <mat-grid-tile>
+    <mat-grid-tile-header>Some Company HQ</mat-grid-tile-header>
+    Company-wide announcements and stuff everyone needs to know
+    <mat-icon aria-label="delete"></mat-icon>
   </mat-grid-tile>
   <mat-grid-tile>
+    <ul>
+      <li><a routerLink="/assignments/{{legalcase.id}}"
+      </li>
+    </ul>
     <mat-grid-tile-header>Message Board</mat-grid-tile-header>
   </mat-grid-tile>
   <mat-grid-tile>
