--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -1,3 +1,13 @@
+ul {
+  text-align: left;
+  padding: 0;
+  margin-top: 50px;
+}
+
+li:not(:last-child) {
+  margin-bottom: 5px;
+}
+
 h3 {
   text-align: center;
 }
@@ -5,10 +15,4 @@ h3 {
 .mat-grid-tile {
   border: 1px solid grey;
   text-align: center;
-}
-
-ul {
-  list-style: none;
-  text-align: left;
-  padding: 0;
 }
