--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -22,11 +22,13 @@
   <mat-grid-tile *ngFor="let team of teams">
     <mat-grid-tile-header>{{team.title}}</mat-grid-tile-header>
     <ul>
-      <li *ngFor="let member of team.members"><mat-icon aria-label="Person Pin" matTooltip="{{member}}" matTooltipPosition="above">person_pin</mat-icon></li>
+      <li *ngFor="let member of team.members">
+        <mat-icon aria-label="Person Pin" matTooltip="{{member}}" matTooltipPosition="above">person_pin</mat-icon>
+      </li>
     </ul>
   </mat-grid-tile>
 </mat-grid-list>
-  <h3>Projects</h3>
+<h3>Projects</h3>
 <mat-grid-list cols="2" rowHeight="200px" [gutterSize]="10">
   <mat-grid-tile *ngFor="let project of projects">
     <mat-grid-tile-header>{{project.title}}</mat-grid-tile-header>
