# If applied, this commit will... Add router link for on tile for teams/id.
# Why is this change needed?
We need to add the route for the tile.

# How does it address the issue?
It wires the tile html to the route.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -19,7 +19,7 @@
 </mat-grid-list>
 <h3>Teams</h3>
 <mat-grid-list cols="2" rowHeight="200px" [gutterSize]="10">
-  <mat-grid-tile *ngFor="let team of teams">
+  <mat-grid-tile *ngFor="let team of teams" routerLink="/teams/{{team.id}}">
     <mat-grid-tile-header>{{team.title}}</mat-grid-tile-header>
     <ul>
       <li *ngFor="let member of team.members">
