--- a/src/app/components/team-detail/team-detail.component.html
+++ b/src/app/components/team-detail/team-detail.component.html
@@ -6,23 +6,25 @@
   </mat-card-header>
   <mat-card-content>
     <div>
-      <label>Title:
-        <input [(ngModel)]="team.title" placeholder="title"/>
-      </label>
+      <mat-form-field>
+        <input matInput placeholder="title" [(ngModel)]="team.title">
+      </mat-form-field>
     </div>
     <div>
-      <label>Members:
-        <mat-form-field>
-          <mat-select placeholder="members" [formControl]="members" multiple>
-            <mat-option *ngFor="let member of team.members" [value]="member">{{member}}</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </label>
+      <mat-form-field>
+        <mat-select placeholder="members" [formControl]="members" multiple>
+          <mat-option *ngFor="let member of team.members" [value]="member">{{member}}</mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button matTooltip="Back!" matTooltipPosition="left" (click)="goBack()">go back</button>
-    <button mat-button matTooltip="Save!" matTooltipPosition="right" (click)="save()">save</button>
+    <button mat-icon-button matTooltip="Back!" matTooltipPosition="above" (click)="goBack()">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
+    <button mat-icon-button matTooltip="Save!" matTooltipPosition="above" (click)="save()">
+      <mat-icon>save</mat-icon>
+    </button>
   </mat-card-actions>
   <mat-card-actions>
     <button mat-icon-button matTooltip="Files!" routerLink="/files/{{team.id}}">
