# If applied, this commit will... Create loop for companies array.
# Why is this change needed?
The user will be able to be a member of numerous companies.

# How does it address the issue?
Creates a loop in the html for the companies array.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,7 +1,7 @@
 <h3>Some company</h3>
 <mat-grid-list cols="2" rowHeight="200px" [gutterSize]="10">
-  <mat-grid-tile>
-    <mat-grid-tile-header>Some Company HQ</mat-grid-tile-header>
+  <mat-grid-tile *ngFor="let company of companies" routerLink="/companies/{{company.id}}">>
+    <mat-grid-tile-header>{{ company.name }}Some Company HQ</mat-grid-tile-header>
     Company-wide announcements and stuff everyone needs to know
     <mat-icon aria-label="delete"></mat-icon>
   </mat-grid-tile>
