# If applied, this commit will... Add the app-navi selector to the view.
# Why is this change needed?
UX. Improved navigation.

# How does it address the issue?
Replaces the existing navigation.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-<app-header></app-header>
+<app-navi></app-navi>
 <div class="container">
   <h1>
     Welcome to {{ title }}!
   </h1>
   <router-outlet></router-outlet>
 </div>
-
-
