# If applied, this commit will... Add announcments div. This div will stretch the width of the entire viewport.  Add padding and background color.
# Why is this change needed?
UX.

# How does it address the issue?
Creates and styles the element.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,4 +1,4 @@
-<h3>Some company</h3>
+<div class="announcments">Placeholder for announcements</div>
 <mat-grid-list cols="2" rowHeight="200px" [gutterSize]="10">
   <mat-grid-tile *ngFor="let company of companies" routerLink="/companies/{{company.id}}">
     <mat-grid-tile-header>{{ company.name }}Some Company HQ</mat-grid-tile-header>
