--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -1,3 +1,18 @@
+.announcments {
+  margin: 10px -33px;
+  padding: 10px;
+  background: #fffae5;
+  width: 100vw;
+}
+
+h2 {
+  text-align: center;
+}
+
+.mat-grid-tile {
+  border: 1px solid grey;
+  text-align: center;
+}
 ul {
   text-align: left;
   padding: 0;
@@ -7,13 +22,4 @@ ul {
 
 li:not(:last-child) {
   margin-bottom: 5px;
-}
-
-h3 {
-  text-align: center;
-}
-
-.mat-grid-tile {
-  border: 1px solid grey;
-  text-align: center;
 }
