# If applied, this commit will... Add a background color to component. Also sets the element to 100vw and undoes the margins by the parent body.
# Why is this change needed?
UX.

# How does it address the issue?
Creates and styles the element.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/navi/navi.component.css
+++ b/src/app/components/navi/navi.component.css
@@ -2,10 +2,17 @@ mat-list {
   list-style: none;
 }
 ul {
+  position: fixed;
+  background: #f6f2ef;
   list-style: none;
   display: flex;
   justify-content: center;
   padding: 0;
+  /* This is to offset the body margin of 8 on all sides. */
+  width: 100vw;
+  top: -16px;
+  left:0;
+  z-index: 1;
 }
 li {
   margin: 0 15px;
