--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -1,23 +1,34 @@
-<!-- <mat-list role="list">
-  <mat-list-item role="listitem">Item 1</mat-list-item>
-  <mat-list-item role="listitem">Item 2</mat-list-item>
-  <mat-list-item role="listitem">Item 3</mat-list-item>
-</mat-list> -->
 <ul>
-  <li >
-    <button mat-icon-button matTooltip="Home" routerLink="/">
-    <mat-icon aria-label="Home" matTooltip="Home" >home</mat-icon>
-  </button>
+  <li>
+    <button class="padding-left-sm" mat-icon-button routerLink="/">
+      <mat-icon aria-label="Home" matTooltip="Home">home</mat-icon>
+      <label>Home</label>
+    </button>
   </li>
-  <li >
-    <button mat-icon-button matTooltip="Projects" routerLink="/projects">
-    <mat-icon aria-label="tab">tab</mat-icon>
+  <li>
+    <button class="padding-left-sm" mat-icon-button routerLink="/pings">
+      <div class="button-content">
+        <mat-icon aria-label="pings">forum</mat-icon>
+        <label>Pings</label>
+      </div>
+    </button>
+  </li>
+  <li>
+    <button class="padding-left-md" mat-icon-button routerLink="/heys">
+      <mat-icon aria-label="heys">message</mat-icon>
+      <label>Hey</label>
+    </button>
+  </li>
+  <li>
+    <button mat-icon-button  routerLink="/reports/progress">
+      <mat-icon aria-label="Activity">hourglass_empty</mat-icon>
+    <label>Activity</label>
   </button>
   </li>
   <li>
-    <button mat-icon-button matTooltip="People" routerLink="/people">
-    <mat-icon aria-label="Person Pin">person_pin</mat-icon>
+    <button class="padding-left-md" mat-icon-button  routerLink="/find">
+      <mat-icon aria-label="find">search</mat-icon>
+    <label>Find</label>
   </button>
   </li>
-
 </ul>
