--- a/src/app/components/company-dashboard/company-dashboard.component.css
+++ b/src/app/components/company-dashboard/company-dashboard.component.css
@@ -1,5 +1,20 @@
-h3 {
+.section {
+  margin-top: 50px;
+}
+
+h2, h4, h5, p {
   text-align: center;
+}
+
+h2 {
+  margin-bottom: 0;
+}
+h5 {
+  margin-top: 0;
+}
+
+h4, h5 {
+  font-weight: normal;
 }
 
 .mat-grid-tile {
@@ -41,6 +56,7 @@ mat-icon {
 #message-board {
   background-color: #1b6ac9;
 }
+
 
 #to-dos {
   background-color: #3cb371;
