# If applied, this commit will... Change the width and top position of the navi.
# Why is this change needed?
Style.  The navi is too far offscreen top.

# How does it address the issue?
Lowers the top to 0.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/navi/navi.component.css
+++ b/src/app/components/navi/navi.component.css
@@ -8,18 +8,22 @@ mat-icon {
   font-size: 20px;
 }
 
+
 ul {
-  background: #f6f2ef;
+  background-color: #f6f2ef;
   display: flex;
   justify-content: center;
   left:0;
   list-style: none;
+  margin: 0;
+  overflow: hidden;
   padding: 0;
   position: fixed;
-  top: -16px;
-  width: 100vw;
+  top: 0;
+  width: 100;
   z-index: 1;
 }
+
 li {
   display: flex;
   flex-direction: column;
