--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -1,5 +1,5 @@
 .announcments {
-  margin: 10px -33px;
+  margin: -14px -33px 10px -33px;
   padding: 10px;
   background: #fffae5;
   width: 100vw;
