# If applied, this commit will... Specify link for watercooler link which will be stored in the company.watercooler_id variable.
# Why is this change needed?
We need to be able to route to the correct watercooler from the company dashboard.

# How does it address the issue?
It attaches a specific router link.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/company-dashboard/company-dashboard.component.html
+++ b/src/app/components/company-dashboard/company-dashboard.component.html
@@ -4,7 +4,7 @@
     Company-wide announcements and stuff everyone needs to know.
   </h4>
   <mat-grid-list cols="2" rowHeight="150px" [gutterSize]="15">
-    <mat-grid-tile>
+    <mat-grid-tile routerLink="/watercooler/{{company.watercooler_id}}">
       <mat-grid-tile-header>Water Cooler</mat-grid-tile-header>
       <div class="icon-container" id="water-cooler">
         <mat-icon aria-label="forum" matTooltip="Water Cooler">forum</mat-icon>
