# If applied, this commit will... Add starter html for component.
# Why is this change needed?
We need the starter html to display the object's values.

# How does it address the issue?
Contains the html.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/watercooler/watercooler.component.html
+++ b/src/app/components/watercooler/watercooler.component.html
@@ -1,3 +1,13 @@
-<p>
-  watercooler works!
-</p>
+<div class='container' *ngIf="watercooler">
+  <h2><a routerLink="/companies/{{watercooler.company_id}}">Company HQ</a></h2>
+
+  <h2>Gather 'round the Watercooler</h2>
+  <p>
+    This is the best place to hash things out quickly, throw links and images back and forth,
+    think out loud, share news, riff, and chat in real-time with your team.
+  </p>
+
+  <ul>
+    <li *ngFor="let message of watercooler.messages"
+  </ul>
+</div>
