# If applied, this commit will... Display all the messages for the current watercooler by closing the open li tag.
# Why is this change needed?
The li element was not properly closed.

# How does it address the issue?
It adds the closing brace for the li tag.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/watercooler/watercooler.component.html
+++ b/src/app/components/watercooler/watercooler.component.html
@@ -8,6 +8,8 @@
   </p>
 
   <ul>
-    <li *ngFor="let message of watercooler.messages"
+    <li *ngFor="let message of watercooler.messages">
+      {{message}}
+    </li>
   </ul>
 </div>
