--- a/src/app/components/watercooler/watercooler.component.html
+++ b/src/app/components/watercooler/watercooler.component.html
@@ -1,5 +1,5 @@
 <div class='container' *ngIf="watercooler">
-  <h2><a routerLink="/companies/{{watercooler.company_id}}">Company HQ</a></h2>
+  <h2><a routerLink="/companies/{{watercooler.company_id}}">{{watercooler.company_name}} HQ</a></h2>
 
   <h2>Gather 'round the Watercooler</h2>
   <p>
